# hlsc-chatagent

./: .coverage  .dockerignore  .env.example  .env.local  .env.test  .env.test.nacos  .env.uat  .gitattributes  .gitignore  CLAUDE.md  ISSUES.md  PRD.md  README.md  SEARCHCOUPONS_COMPLETION.md  SEARCHSHOPS_DESIGN.md  SEARCH_SHOPS_UPGRADE_DESIGN.md  chatagent.code-workspace  clash.yaml  claude-progress-filter.sh  code-review-issues.md  code-review-issues2.md  config.json  docker-compose.yml  learnings.md  navigator7.md  prd.json  progress.txt  pyproject.toml  pyrightconfig.json  ralph.sh  server.py  “话痨”是谁.md  业务地图-v2.yaml  省钱方法.md
extensions/: .coverage  README.md  pack_skill.bat  pack_skill.sh  pyproject.toml
extensions/business-map/: AllTree.yaml  convert_tree.py  design.md  intent_keywords.yaml  scene_config.yaml  scene_config_example.yaml
extensions/business-map/visualizer/: README.md  index.html
extensions/hlsc/: __init__.py  enums.py
extensions/hlsc/business_map/: __init__.py  loader.py  model.py
extensions/hlsc/models/: __init__.py  car.py  coupon_search.py  location.py  location_filter.py  shop_search.py
extensions/hlsc/services/: __init__.py  address_resolver.py  business_map_service.py  decision_tree_evaluator.py  scene_service.py  slot_state_service.py  state_tree_service.py  user_stat_service.py
extensions/hlsc/tools/: _submit_helper.py  apply_coupon.py  ask_user_car_info.py  ask_user_location.py  book_coupon.py  call_query_codingagent.py  call_recommend_project.py  check_coupon_eligibility.py  claim_coupon.py  classify_project.py  collect_insurance_info.py  collect_location.py  collect_user_car_info.py  collect_user_location.py  collect_vehicle_info.py  confirm_booking.py  create_bidding_order.py  create_booking_order.py  create_contact_order.py  delegate.py  fuzzy_match_car_info.py  fuzzy_match_location.py  geocode_location.py  get_project_price.py  get_representative_car_model.py  get_shop_types.py  get_visited_shops.py  handle_bidding_timeout.py  invite_merchant.py  knowledge_base_search.py  list_user_cars.py  match_project.py  prompt_loader.py  purchase_coupon.py  push_order_to_merchant.py  query_execution_status.py  query_market_price.py  read_business_node.py  report_to_workflow.py  search_coupon.py  (+10 more)
extensions/skills/: README.md
extensions/skills/booking-execution/: SKILL.md
extensions/skills/booking-plan-builder/: SKILL.md
extensions/skills/confirm-car-info/: SKILL.md
extensions/skills/confirm-location/: SKILL.md
extensions/skills/contact-order/: SKILL.md
extensions/skills/diagnose-car/: SKILL.md
extensions/skills/discovery-guide/: SKILL.md
extensions/skills/greeting-demo/: SKILL.md  script.py
extensions/skills/history-shops/: SKILL.md
extensions/skills/insurance-bidding/: SKILL.md
extensions/skills/intent-recognize/: SKILL.md
extensions/skills/merchant-search-and-confirm/: SKILL.md
extensions/skills/merchant-selection/: SKILL.md
extensions/skills/planning-guide/: SKILL.md
extensions/skills/platform-intro/: SKILL.md
extensions/skills/preference-capture/: SKILL.md
extensions/skills/price-inquiry/: SKILL.md
extensions/skills/project-demand-clarifier/: SKILL.md
extensions/skills/query-part-price/: SKILL.md
extensions/skills/query-project-price/: SKILL.md
extensions/skills/saving-goal-clarifier/: SKILL.md
extensions/skills/saving-methods/: SKILL.md
extensions/skills/saving-playbook/: SKILL.md
extensions/skills/saving-strategy-guide/: SKILL.md
extensions/skills/saving-strategy-selector/: SKILL.md
extensions/skills/search-nearby-shops/: SKILL.md
extensions/skills/searchshops-coding/: SKILL.md
extensions/skills/service-demand-clarifier/: SKILL.md
extensions/skills/time-selection/: SKILL.md
extensions/skills/vehicle-info-guide/: SKILL.md
extensions/tests/: conftest.py  test_business_map_assembler.py  test_business_map_e2e.py  test_business_map_loader.py  test_business_map_service.py  test_car_context_flow.py  test_decision_tree_evaluator.py  test_diagnose_flow.py  test_hlsc_context_scene.py  test_scene_orchestrator.py  test_scene_service.py  test_server.py  test_slot_state_service.py
extensions/tools/: __init__.py
gateway/: .env.test  Dockerfile  app.py  pyproject.toml  server.py
gateway/routes/: auto.py  mock_data.py  projects.py  quotations.py  shop.py  shops.py
mainagent/: .env.example  .env.local  .env.local.bak  .env.prod  .env.test  .env.test.nacos  .env.uat.nacos  DATA_SETUP.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  TESTING_GUIDE.md  agents.yaml  design.md  jenkins.bak  mock_data_server.py  pyproject.toml  server.py  stage_config.yaml  start_local.sh  verify_mock_data.py
mainagent/.chatagentsample/: README.md  mcp.json
mainagent/business-map/: _root.yaml
mainagent/prompts/: README.md
mainagent/src/: __init__.py  agent_registry.py  app.py  business_map_hook.py  chat_stream2_router.py  classify.py  classify_router.py  config.py  dsl_models.py  hlsc_context.py  hlsc_core.py  orchestrator_prompt.py  plan.py  plan_loader.py  plan_router.py  pre_run_hook.py  prompt_loader.py  scene_classifier.py  scene_config.py  spec_prompt_loader.py
mainagent/tests/: __init__.py  test_agent_registry.py  test_chat_stream2_router.py  test_classify.py  test_plan.py  test_scene_routing.py
sdk/: README.md  pyproject.toml
sdk/agent_sdk/: __init__.py  agent.py  agent_app.py  config.py  exceptions.py  logging.py  prompt_loader.py
sdk/tests/: conftest.py  mock_mcp_server.py
subagents/auctioneer/: .env.local  pyproject.toml  server.py
subagents/business_map_agent/: .env.local  .env.prod  .env.test  .env.test.nacos  .env.uat  .env.uat.nacos  Dockerfile  pyproject.toml  server.py
subagents/coding_agent/: .env.example  .env.local  .env.test  .env.test.nacos  .env.uat  .env.uat.nacos  Dockerfile  mock_api_server.py  pyproject.toml  server.py
subagents/diagnose_agent/: .env.example  .env.local  pyproject.toml  server.py
subagents/recommend_project/: .env.example  .env.local  .env.test  .env.test.nacos  .env.uat  .env.uat.nacos  Dockerfile  pyproject.toml  server.py
(+930 files in other folders)
