[project]
name = "chatagent-workspace"
version = "0.1.0"
description = "话痨说车对话 Agent（monorepo）"
requires-python = ">=3.12"
dependencies = [
    "agent-sdk",
    "hlsc-mainagent",
    "hlsc-demo-price-finder",
]

[tool.uv.sources]
agent-sdk = { path = "sdk", editable = true }
hlsc-mainagent = { path = "mainagent", editable = true }
hlsc-demo-price-finder = { path = "subagents/demo_price_finder", editable = true }
