[project]
name = "hlsc-extensions"
version = "0.1.0"
description = "业务共享扩展（skills + tools），各 agent 按需引用"
requires-python = ">=3.12"
dependencies = [
    "agent-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "skills"]

[tool.uv.sources]
agent-sdk = { path = "../sdk", editable = true }
