[project]
name = "hlsc-extensions"
version = "0.1.0"
description = "业务共享扩展（skills + tools），各 agent 按需引用"
requires-python = ">=3.12"
dependencies = [
    "agent-sdk",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hlsc"]

[tool.uv.sources]
agent-sdk = { path = "../sdk", editable = true }
