[project]
name = "hlsc-mainagent"
version = "0.1.0"
description = "话痨说车主 Agent"
requires-python = ">=3.12"
dependencies = [
    "agent-sdk",
    "hlsc-extensions",
    "httpx>=0.27",
    "logfire[httpx]>=4.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "playwright>=1.40",
    "pytest-playwright>=0.4",
    "httpx>=0.27",
]

[tool.uv.sources]
agent-sdk = { path = "../sdk", editable = true }
hlsc-extensions = { path = "../extensions", editable = true }
