[project]
name = "hlsc-auctioneer"
version = "0.1.0"
description = "话痨说车拍卖师 Subagent：替车主向商户发起竞标、收集报价、汇总最优方案"
requires-python = ">=3.12"
dependencies = [
    "agent-sdk",
    "hlsc-extensions",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27",
]

[tool.uv.sources]
agent-sdk = { path = "../../sdk", editable = true }
hlsc-extensions = { path = "../../extensions", editable = true }
