[project]
name = "hlsc-business-map-agent"
version = "0.1.0"
description = "话痨说车业务地图定位器 Subagent：逐层导航业务地图，输出定位节点 ID"
requires-python = ">=3.12"
dependencies = [
    "agent-sdk",
    "hlsc-extensions",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27",
]

[tool.uv.sources]
agent-sdk = { path = "../../sdk", editable = true }
hlsc-extensions = { path = "../../extensions", editable = true }
