[project]
name = "hlsc-code-agent"
version = "0.1.0"
description = "编程查询 Subagent：通过编写代码调用业务 API 回答复杂问题"
requires-python = ">=3.12"
dependencies = [
    "agent-sdk",
    "httpx>=0.27",
    "numpy>=1.26",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27",
]

[tool.uv.sources]
agent-sdk = { path = "../../sdk", editable = true }
