[project]
name = "hlsc-diagnose-agent"
version = "0.1.0"
description = "汽车故障诊断 Subagent — 从故障知识库检索并分析故障原因"
requires-python = ">=3.12"
dependencies = [
    "agent-sdk",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27",
]

[tool.uv.sources]
agent-sdk = { path = "../../sdk", editable = true }
